<resources>
    <string name="app_name">To do</string>
    <string name="add_task">Add Task</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time and Date</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="addtask">Add Task</string>
    <string name="addTask" />
    <string name="addTaskk">Add Task</string>
    <string name="addT">Add Task</string>
    <string name="update_task">Update Task</string>
    <string name="todo">TODO</string>
    <string name="completed">COMPLETED</string>
    <string name="add_task_T">Add Task</string>
    <string name="search" />
</resources>